<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive_controller</name>
  <version>0.0.0</version>
  <description>
    Controller for a differential drive mobile base
  </description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>Apache License 2.0</license>

  <author email="brighten0522@gmail.com">Brighten Lee</author> 
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>realtime_tools</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_parameter_server</depend>
  <depend>hardware_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
